# jsonmodels

./: .coveragerc  .envrc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  Jenkinsfile  LICENSE  Makefile  README.rst  mypy.ini  pyproject.toml  requirements.txt  schema.json  setup.cfg  setup.py  tasks.py  todo  tox.ini
.github/workflows/: docs.yml  lint.yml  release.yml  test.yml
devbin/: build-docs
docs/: api.rst  conf.py  implementation_notes.rst  index.rst  installation.rst  jsonmodels.rst  modules.rst  spelling_wordlist.txt  usage.rst  utils.rst
docs/api/: error.rst  errors.rst  fields.rst  models.rst  parsers.rst  validators.rst
history/: 0bd40cc  1405454505.5-e265e9e  1405709354.87-35d7c12  1405713107.71-0ebf5cb  1407174076.2-7888a06  1407174092.29-e84fd50  1407174121.58-6dd02f9  1407238978.44-aadf114  1413650283.19-1877cc0  1413650557.79-bf0def5  1413717715.07-7f9aa41  1413749022.86-76988d9  1415710162.07-0cd0d65  1416060226.71-88b7b5b  1446502220344385-053b8c8  1446502242966755-885bdb6  1447368987632672-ed87839  1447396644072704-9ea01b4  1451515030007479-65c0ebd  1497911144303744-f02fd7f  1497911918064779-3987d33  1497911926961432-bfddedc  1514490778518163-23ebd2c  1517740665082750-cad32d5  1517740736182749-150fbd2  1571985591440588-047509e  1571985599706363-c3bf171  1655396048122140-0c96372  1699609709341144-f161435  1699638234308787-45de861  1699638246045444-8a28355  1699638249190193-1aa7841  1765305359937317-2681eb1  1765305379256114-8cc7bb9  1765305394331882-c0e0955  30e096c  34f9ecf  35645df  4a85993  68268fe  (+4 more)
jsonmodels/: __init__.py  builders.py  collections.py  error.py  errors.py  fields.py  models.py  parsers.py  types.py  utilities.py  utils.py  validators.py
tests/: __init__.py  test_circular_references.py  test_data_initialization.py  test_datetime.py  test_datetime_fields.py  test_fields.py  test_jsonmodels.py  test_lazy_loading.py  test_memory_usage.py  test_name.py  test_nullable.py  test_plain.py  test_project.py  test_schema.py  test_struct.py  test_transformers.py  test_utilities.py  test_utils.py  test_validation.py  utilities.py  utils.py
tests/fixtures/: schema1.json  schema2.json  schema3.json  schema4.json  schema5.json  schema6.json  schema_circular.json  schema_circular2.json  schema_empty_object.json  schema_enum.json  schema_length.json  schema_length_list.json  schema_length_max.json  schema_length_min.json  schema_list_item_simple.json  schema_max.json  schema_max_exclusive.json  schema_min.json  schema_min_exclusive.json  schema_pattern.json  schema_pattern_flag.json  (+3 more)
(+1 files in other folders)
